test/libsolidity/syntaxTests/dataLocations/publicFunction/function_argument_location_specifier_test_public_transient.sol
contract test {
    function f(bytes transient) public;
}
// ----
// TypeError 6651: (31-46): Data location must be "memory" or "calldata" for parameter in function, but none was given.
